<resources>
    <string name="app_name">FindMyFlavour</string>
    <string name="business_name">Business Name</string>
    <string name="business_description">Description</string>
    <string name="business_street_number">Street Number</string>
    <string name="street_name">Street Name</string>
    <string name="city">City</string>
    <string name="postal_code">Postal Code</string>
    <string name="business_information">Business Information</string>
    <string name="submit">Submit</string>
    <string name="closed_all_day">Closed All Day</string>
    <string name="monday">Monday</string>
    <string name="open_closed">Open: Closed</string>
    <string name="close_closed">Close: Closed</string>
    <string name="add_open_time">Add Open Time</string>
    <string name="add_close_time">Add Close Time</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="submit_hours">Submit Hours</string>
    <string name="set_hours">Set Hours</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="add_hours">Add Hours</string>
    <string name="register">Register</string>
    <string name="owner_name">Owner Name</string>
    <string name="owner_email">Owner Email</string>
    <string name="owner_password">Owner Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="my_businesses">My Businesses</string>
    <string name="address">Address:</string>
    <string name="description">Description:</string>
    <string name="closed">Closed</string>
</resources>