<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/PeachPuff">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        style="@style/LoginTitleTextView"/>

    <EditText
        android:id="@+id/login_edittext_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        style="@style/LoginEditText"/>

    <EditText
        android:id="@+id/login_edittext_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        style="@style/LoginEditText"/>

    <Button
        android:id="@+id/login_fragment_login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        style="@style/LoginButtons"/>

    <Button
        android:id="@+id/login_fragment_register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="No Account? Register Here!"
        style="@style/LoginButtons"/>

</LinearLayout>